2005-09-16  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (javadoc): On overview page, separate frysk* and
	imported packages into separate groups.

2005-09-14  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (javadoc): Add jargs, and jline to documentation.
	
	* Makefile.am (javadoc): Update, replace "com" with "frysk".

2005-09-10  Andrew Cagney  <cagney@redhat.com>

	* COPYING, EXCEPTION: New files; copyright of all files updated.

2005-09-09  Igor Foox <ifoox@redhat.com>

	* Makefile.am, configure.ac, autogen.sh: Added frysk-gui
	to build system.

2005-08-11  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (doxygen, javadoc): Add rules.
	* configure.ac: Add AM_PROG_GCJ.
	* overview.html: New.
	* Doxyfile.in: New.

	* autogen.sh: Make the list of subdirectories explicit.

	* configure.ac, Makefile.am (SUBDIRS): Replace jline with
	frysk-imports.

2005-07-28  Andrew Cagney  <cagney@redhat.com>

	* configure.ac (AC_CONFIG_FILES): Add jline/Makefile.
	* Makefile.am (SUBDIRS): Add jline.

2005-07-27  Andrew Cagney  <cagney@redhat.com>

	* configure.ac: New file.
	* autogen.sh: New file.
	* Makefile.am: New file.
	* .cvsignore: New file.
